--- a/src/components/BoardsWeather/BoardsWeather.module.scss
+++ b/src/components/BoardsWeather/BoardsWeather.module.scss
@@ -1,13 +1,14 @@
 .BoardsWeather{
-width: 1100px;
+width: 100%;
+height: auto;
 display: flex;
 flex-direction: column;
-padding: 10px;
-
+align-items: center;
 }
-
 .Container{
+width: 1100px;
 display: flex;
 flex-wrap: wrap;
-justify-content: space-around;
+// justify-content: space-around;
+padding: 10px 0 10px 0;
 }
