--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,10 +1,12 @@
-.Header{
+.Footer{
    width: 100%;
    height: 80px;
-   background-color: #0078d6;
-   color:#fff; 
+   background-color: #2a2a2a;
+   color: #FFFFFF; 
    display: flex;
    align-items: center;
    justify-content: center;
+   position:absolute; 
+   bottom:0;
    
 }
