--- a/src/components/BoardsWeather/BoardsWeather.module.scss
+++ b/src/components/BoardsWeather/BoardsWeather.module.scss
@@ -4,10 +4,12 @@ height: auto;
 display: flex;
 flex-direction: column;
 align-items: center;
+justify-content: center;
 }
 .Container{
-width: 1100px;
+width: 80%;
 display: flex;
 flex-wrap: wrap;
 padding: 10px 0 10px 0;
+justify-content: space-evenly;
 }
