--- a/src/components/CityBoard/CityBoard.module.scss
+++ b/src/components/CityBoard/CityBoard.module.scss
@@ -2,6 +2,7 @@
    width: 250px;
    height: 150px;
    display:flex;
+   flex-direction: column;
    justify-content: center;
    align-items: center;
    background-image: linear-gradient(to right top, #2d76e4, #0784e8, #0090eb, #009cec, #12a7eb);
@@ -17,4 +18,9 @@
     z-index: 999;
     margin:0px;
    }
+}
+.Content{
+   width: 100%;
+   display: flex;
+   justify-content: space-evenly;
 }
