--- a/src/components/CityBoard/CityBoard.module.scss
+++ b/src/components/CityBoard/CityBoard.module.scss
@@ -10,17 +10,15 @@
    box-shadow: 3px 2px 15px -3px rgba(0, 0, 0, 0.7);
    color: #fff;
    margin: 10px;
+   border:2px solid #000;
    &:hover{
-    position: relative;
-    width: 270px;
-    height: 170px;
     transition: ease-in 0.2s; 
-    z-index: 999;
-    margin:0px;
+    background-image: linear-gradient(to right top, #0078d6, #0078d6, #0078d6, #1895d3, #28a0d8);
    }
 }
 .Content{
    width: 100%;
    display: flex;
    justify-content: space-evenly;
+   align-items:center;
 }
