--- a/src/components/GeoCity/GeoCity.module.scss
+++ b/src/components/GeoCity/GeoCity.module.scss
@@ -1,8 +1,25 @@
 .GeoCity{
-    width: 100%;
-    height: 80px;
+    width: 80%;
     display: flex;
-    background-color: grey;
-    justify-content: center;
-    align-items: center;
+    padding:10px;
 }
+//     width: 80%;
+//     display: flex;
+//     flex-direction: column;
+//     align-items:center;
+//     padding: 5px 5px 5px 10px;
+//     img{
+//         width: 100%;
+//         height: 80px;
+//         align-items:center;
+//     }
+// }
+// .Content{
+//     width: 100%;
+//     display: flex;
+//     flex-direction: column;
+//     font-size: 1.2em;
+// }
+// .Icon{
+//     display: flexbox;
+// }
