--- a/src/components/GeoCity/GeoCity.module.scss
+++ b/src/components/GeoCity/GeoCity.module.scss
@@ -1,10 +1,9 @@
 .GeoCity{
-    width: 80%;
+    width: 30%;
     display: flex;
     flex-direction: column;
     align-items:center;
-    padding: 5px 5px 5px 10px;
-    margin-top: 10px;
+    padding: 5px 5px 5px 20px;
 }
 .Content{
     width: 100%;
@@ -19,7 +18,7 @@
     display: flex;
     align-items:center;
     img{
-        width: 200%;
-        height: 200%;
+        width: 100px;
+        height: 100px;
     }
 }
