--- a/src/components/GeoCity/GeoCity.module.scss
+++ b/src/components/GeoCity/GeoCity.module.scss
@@ -1,16 +1,22 @@
 .GeoCity{
-    width: 30%;
+    width: 100%;
+    height: 180px;
     display: flex;
-    flex-direction: column;
     align-items:center;
-    padding: 5px 5px 5px 20px;
+    padding: 20px 5px 20px 20px;
+    border-bottom: 2px solid black;
+    background-color: #e9e9e9;
+    span{
+        padding-bottom: 10px;
+    }
 }
 .Content{
     width: 100%;
     display: flex;
     flex-direction: column;
+    align-items:center;
     font-size: 1.2em;
-    h2:first-child{
+    h1:first-child{
         text-decoration: underline;
     }
 }
@@ -18,7 +24,20 @@
     display: flex;
     align-items:center;
     img{
-        width: 100px;
-        height: 100px;
+        width: 90px;
+        height: 90px;
     }
+    span{
+        padding: 5px;
+    }
+}
+.ContentBox{
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+}
+.Info{
+    display: flex;
+    flex-direction: column;
 }
