--- a/src/components/Map/Map.module.scss
+++ b/src/components/Map/Map.module.scss
@@ -2,7 +2,7 @@
     width: auto;
     display: flex;
     align-items: center;
-    border: 3px solid green;
+    border: 2px solid #0078d6;
   }
   
   .MarkerBtn {
