--- a/src/components/BoardsWeather/BoardsWeather.module.scss
+++ b/src/components/BoardsWeather/BoardsWeather.module.scss
@@ -1,6 +1,6 @@
 .BoardsWeather{
 width: 100%;
-height: auto;
+height: 100%;
 display: flex;
 flex-direction: column;
 align-items: center;
@@ -11,8 +11,5 @@ display: flex;
 flex-wrap: wrap;
 padding: 10px 0 10px 0;
 justify-content: space-evenly;
-}
-.ContentContainer{
-    width: 100%;
-    display: flex;
+
 }
