--- a/src/components/GeoCity/GeoCity.module.scss
+++ b/src/components/GeoCity/GeoCity.module.scss
@@ -1,11 +1,10 @@
 .GeoCity{
     width: 100%;
-    height: 180px;
+    height: 200px;
     display: flex;
     align-items:center;
-    padding: 20px 5px 20px 20px;
     border-bottom: 2px solid black;
-    background-color: #e9e9e9;
+    background-color: #b1ddf0;
     span{
         padding-bottom: 10px;
     }
@@ -13,8 +12,8 @@
 .Content{
     width: 100%;
     display: flex;
-    flex-direction: column;
     align-items:center;
+    justify-content: space-around;
     font-size: 1.2em;
     h1:first-child{
         text-decoration: underline;
@@ -30,12 +29,6 @@
     span{
         padding: 5px;
     }
-}
-.ContentBox{
-    width: 70%;
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
 }
 .Info{
     display: flex;
