add city finish

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,3 +7,8 @@
    align-items: center;
    justify-content: space-between;
 }
+.AddForm{
+   display: flex;
+   height: 100%;
+   align-items:center;
+}
