fetch weather 2 page

--- a/src/components/CityBoard/CityBoard.module.scss
+++ b/src/components/CityBoard/CityBoard.module.scss
@@ -1,19 +1,23 @@
 .CityBoard{
    width: 250px;
    height: 150px;
-   display:flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
    background-image: linear-gradient(to right top, #2d76e4, #0784e8, #0090eb, #009cec, #12a7eb);
    border-radius: 25px;
    box-shadow: 3px 2px 15px -3px rgba(0, 0, 0, 0.7);
-   color: #fff;
    margin: 10px;
    border:2px solid #000;
    &:hover{
     transition: ease-in 0.2s; 
     background-image: linear-gradient(to right top, #0078d6, #0078d6, #0078d6, #1895d3, #28a0d8);
+   }
+
+   a{
+      color: #fff;
+      display:flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none;
    }
 }
 .Content{
