--- a/src/components/CityWeatherInfo/CityWeatherInfo.module.scss
+++ b/src/components/CityWeatherInfo/CityWeatherInfo.module.scss
@@ -1,3 +1,55 @@
 .CityWeather{
-    color: red;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.PhotoCityContainer{
+    width: 100%;
+    height: 300px;
+    img{
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.WeatherContent{
+    width: 100%;
+    display: flex;
+    align-items:center;
+    justify-content: space-around;
+    flex-direction: column;
+    font-size: 1.2em;
+   
+    h1:first-child{
+        text-decoration: underline;
+    }
+    span{
+        padding: 5px;
+    }
+}
+.Icon{
+   
+    display: flex;
+    align-items:center;
+    img{
+        width: 100px;
+        height: 100px;
+    }
+    span{
+        padding: 5px;
+    }
+}
+.Info{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 25px;
+}
+
+.ContentInfo{
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
 }
