--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -27,6 +27,10 @@
    align-items:center;
 }
 
-.Clock{
-   width: 25%;
+.Seacrh{
+   height: 100%;
+   display: flex;
+   align-items:center;
+   justify-content: center;
+   flex-direction: column;
 }
